syntax = "proto3";
package paralus.dev.rpc.v3;

import "proto/types/commonpb/v3/auth.proto";

service ServiceAuth {
    rpc IsRequestAllowed(paralus.dev.types.common.v3.IsRequestAllowedRequest) returns (paralus.dev.types.common.v3.IsRequestAllowedResponse);
    // rpc GetSession(GetSessionRequest) returns (GetSessionResponse);
    // rpc GetAPIKey(GetAPIKeyRequest) returns (GetAPIKeyResponse);
}
